--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,3 +3,13 @@
 
 @import "{{ site.theme }}";
 
+a{
+  color:#083791;
+  text-decoration:none;
+}
+
+a:hover,a:focus{
+  color:#069;
+  font-weight:bold;
+  text-decoration: underline;
+}
